tests/errors/already-assigned.fil
comp main<G: 1>(
    @[G, G+1] in1: 32,
    @[G, G+1] in2: 32
) -> (
    @[G, G+1] out: 32
) {
    bundle a[4]: for<#k> @[G, G+1] 32;
    a{1} = in1;
    a{2} = in2;
    a{0} = a{1};
    a{0} = a{2};
    out = a{0};
}