tests/errors/already-assigned.expect
---CODE---
1
---STDERR---
error: Port a{0} is assigned to multiple times.
   ┌─ tests/errors/already-assigned.fil:10:5
   │
 7 │     bundle a[4]: for<#k> @[G, G+1] 32;
   │            - defined here
   ·
10 │     a{0} = a{1};
   │     ^^^^ assigned here
11 │     a{0} = a{2};
   │     ^^^^ assigned here

error: Port a{3} is never assigned to.
  ┌─ tests/errors/already-assigned.fil:7:12
  │
7 │     bundle a[4]: for<#k> @[G, G+1] 32;
  │            - defined here

Compilation failed with 2 errors.
Run with --show-models to generate assignments for failing constraints.
